--- a/movies/templates/movies/base.html
+++ b/movies/templates/movies/base.html
@@ -6,29 +6,68 @@
     <title>{% block 'title' %}GaFlix{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">GaFlix</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+<body style="background-color: #E9E9E9;">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" style="background: #ffffff; backdrop-filter: blur(10px); font-weight: bold;  margin-left: 305px; margin-right: 305px;">
+        <div class="container-fluid">
+            <span class="navbar-brand" style="color: #99D3DF; font-weight: bold;">GaFlix</span>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                
+                <!--
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
+                -->
+
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/" style="color: #99D3DF;">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/druhy/">Druhy</a>
+                        <a class="nav-link" href="/movies/" style="color: #99D3DF;">Movies</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/druhy/" style="color: #99D3DF;">Druhy</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    
+    
+       
+
     <div class="container">
         {% block 'content' %}
         {% endblock %}
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <div class="jumbotron text-center fixed-bottom" style="background-color: #ffffff;">
+        <p style="color: #99D3DF; font-weight: bold;">Sponsored by Jaromír "Barranďovák" Soukup</p>
+    </div>    
+    
+    <style>
+        body {
+            padding-bottom: 100px;
+            margin-left: 50px;
+            margin-right: 50px;
+        }
+
+        .jumbotron {
+            backdrop-filter: blur(10px);
+        }
+
+        .fixed-bottom {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            padding: 10px;
+            box-shadow: 0 0 15px 10px rgba(255, 255, 255, 0.8);
+            z-index: 1000;
+        }
+    </style>
+
 </body>
 </html>
