--- a/movies/templates/movies/movies.html
+++ b/movies/templates/movies/movies.html
@@ -3,37 +3,33 @@
 {% block 'title' %}Movies | {{ block.super }}{% endblock %}
 
 {% block 'content' %}
-    <h1>Movies</h1>
+    <div class="container mt-5">
+        <h1 class="text-center" style="color: #99D3DF;">Movies</h1>
 
-    <div class="row row-cols-1  row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-2">
-    {% for movie in movies %}
-        <div class="col">
-            <div class="card h-100">
-                <img class="card-img-top" src="{% if movie.photo %}{{movie.photo}}{% else %}//place-hold.it/180x100/{% endif %}" alt="Movie photo">
-                <div class="card-body">
-                    <h5 class="card-title">{{movie.title }} ({{ movie.year}})</h5>
-                    {% if movie.director %}<h6>{{ movie.director}}</h6>{% endif %}
-                    
-                    {% for genre in movie.genres.all %}
-                    <span class="badge rounded-pill text-bg-primary">{{genre.name}}</span>
-                    {% endfor %}
-    
-                    <p class="card-text ">{{ movie.description|truncatewords_html:10 }}</p>
-                </div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-2 justify-content-center">
+        {% for movie in movies %}
+            <div class="col">
+                <div class="card h-100 text-center" style="background-color: #ffffff; border: 2px solid #99D3DF; border-radius: 10px; overflow: hidden;">
+                    <img class="card-img-top" src="{% if movie.photo %}{{movie.photo}}{% else %}//place-hold.it/180x100/{% endif %}" alt="Movie photo">
+                    <div class="card-body">
+                        <h5 class="card-title" style="color: #99D3DF;">{{movie.title }} ({{ movie.year}})</h5>
+                        {% if movie.director %}
+                            <h6 style="color: #99D3DF;">{{ movie.director}}</h6>
+                        {% endif %}
+                        
+                        {% for genre in movie.genres.all %}
+                            <span class="badge rounded-pill text-bg-primary" style="background-color: #99D3DF;">{{genre.name}}</span>
+                        {% endfor %}
+        
+                        <p class="card-text">{{ movie.description|truncatewords_html:10 }}</p>
+                    </div>
 
-                <div class="card-footer text-center">
-                    <a href="{% url 'movie' movie.id %}" class="btn btn-secondary">Detaily</a>
+                    <div class="card-footer">
+                        <a href="{% url 'movie' movie.id %}" class="btn btn-secondary" style="color: #99D3DF; background-color: #E9E9E9; border: 2px solid #99D3DF;">Detaily</a>
+                    </div>
                 </div>
-                
-                <style>
-                    .card-footer {
-                        display: flex;
-                        justify-content: center;
-                    }
-                </style>
-                
             </div>
+        {% endfor %}
         </div>
-    {% endfor %}
     </div>
 {% endblock %}
